# TheCapitalFund

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: redeploy.yml
terraform/: main.tf  outputs.tf  variables.tf
thecapitalfund/: app.py
thecapitalfund/assets/: architecture  cicd  style.css
thecapitalfund/controller/: callbacks.py  login.py  models.py
thecapitalfund/model/: analysis.py  api.py  intel.py  members.py  prices.py  research.py  transactions.py
thecapitalfund/testing/: test_login.py
thecapitalfund/view/: architecture.py  cicd.py  layout.py  plotting.py
